--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,7 @@
 
 cosmosdb.uri=
 cosmosdb.key=
+
+## keyvault.name=palVault;keyvault.uri=https://palVault.vault.azure.net
+keyvault.name={$keyvault.name}
+keyvault.uri={$keyvault.uri}
