--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,5 +3,5 @@ cosmosdb.uri=
 cosmosdb.key=
 
 ## keyvault.name=palVault;keyvault.uri=https://palVault.vault.azure.net
-keyvault.name={$keyvault.name}
-keyvault.uri={$keyvault.uri}
+keyvault.name=palVault
+keyvault.uri=https://palVault.vault.azure.net
