--- a/.github/workflows/master_palapp1.yml
+++ b/.github/workflows/master_palapp1.yml
@@ -49,5 +49,5 @@ jobs:
         with:
           app-name: 'palapp1'
           slot-name: 'Production'
-          creds: ${{ secrets.AZURE_CREDENTIALS }}
+          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_AB204BDFE2684FF2A2CBF08A9B68FF76 }}
           package: '*.war'
