--- a/.github/workflows/master_palapp1.yml
+++ b/.github/workflows/master_palapp1.yml
@@ -28,7 +28,7 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: java-app
-          path: '${{ github.workspace }}/target/*.war'
+          path: '${{ github.workspace }}/target/*.jar'
 
   deploy:
     runs-on: ubuntu-latest
@@ -50,4 +50,4 @@ jobs:
           app-name: 'palapp1'
           slot-name: 'Production'
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_AB204BDFE2684FF2A2CBF08A9B68FF76 }}
-          package: '*.war'
+          package: '*.jar'
